# Resume-parser

./: .gitignore  README.md  config.json  pyproject.toml  requirements.txt
candidate_transformer/: pipeline.py
candidate_transformer/adapters/: __init__.py  base.py  csv_adapter.py  resume_adapter.py
candidate_transformer/cli/: main.py
candidate_transformer/confidence/: __init__.py  scoring.py
candidate_transformer/config/: __init__.py  pipeline_config.py
candidate_transformer/extraction/: __init__.py  csv_extractor.py  resume_extractor.py
candidate_transformer/matching/: __init__.py  dedup.py
candidate_transformer/models/: __init__.py  builder.py  canonical.py  store.py
candidate_transformer/normalization/: __init__.py  normalizers.py
candidate_transformer/projection/: __init__.py  engine.py
candidate_transformer/provenance/: __init__.py  tracking.py
candidate_transformer/resolver/: __init__.py  conflict_resolution.py
candidate_transformer/validation/: __init__.py  default_schema.py  schema_validation.py
data/sample_input/: candidates.csv  jonathan_doe_resume.txt
tests/: test_confidence.py  test_conflict_resolution.py  test_csv_extraction.py  test_matching.py  test_normalization.py  test_pipeline_e2e.py  test_projection.py  test_provenance.py  test_resume_extraction.py  test_validation.py
