[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Multi-Source Candidate Data Transformer Pipeline"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "jsonschema>=4.0,<5.0",
    "pypdf>=4.0",
    "python-docx>=1.1",
]

[project.scripts]
candidate-transformer = "candidate_transformer.cli.main:main"

[tool.setuptools.packages.find]
include = ["candidate_transformer*"]
